Fixed stretched images issues

--- a/src/components/testimonials/style.css
+++ b/src/components/testimonials/style.css
@@ -54,6 +54,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .testimonials-description {
